@@ -2,6 +2,8 @@ ovirt-host-deploy -- oVirt host deploy
 
 ????-??-?? - Version 1.4.0
 
+ * tune: tuned: set the tuned profile based on environment variable,
+   rhbz#1209418.
 
 2015-01-15 - Version 1.3.1
 
